src-ken&y/objects/Customer_Receipt__c.object
<CustomObject>
    <customHelpPage>HelpReceipts</customHelpPage>
    <description>Records all customer receipts (checks, credit cards, EFT, etc) against invoice.</description>
    <fields>
        <fullName>Amount_In_Words__c</fullName>
        <description>Amount on check in words</description>
        <label>Amount In Words</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Amount_Received__c</fullName>
        <description>Amount received</description>
        <label>Amount Received</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Amount_To_Apply__c</fullName>
        <description>The total amount (bank file lines + credit memos + general deductions) available to pay off invoices and claims.</description>
        <label>Amount To Apply</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Amount_Unapplied__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Amount not applied to any invoices.</description>
        <label>Amount Unapplied</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Autonumber__c</fullName>
        <displayFormat>{0000000000}</displayFormat>
        <label>Autonumber</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Balance__c</fullName>
        <formula>Amount_Received__c + Total_Payment__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Balance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Bank_Account_2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Bank Account</label>
        <referenceTo>Bank_Account__c</referenceTo>
        <relationshipLabel>Customer Receipts</relationshipLabel>
        <relationshipName>Customer_Receipts1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Claim__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Claim</label>
        <referenceTo>Claim__c</referenceTo>
        <relationshipLabel>Customer Receipts</relationshipLabel>
        <relationshipName>Customer_Receipts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Company_Identifier__c</fullName>
        <description>Company Identifier</description>
        <label>Company Identifier</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Company__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Company associated with this Customer Receipt. It should be populated with the default value for the user logged in.</description>
        <label>Company</label>
        <referenceTo>Company__c</referenceTo>
        <relationshipLabel>Customer Receipts</relationshipLabel>
        <relationshipName>Customer_Receipts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Currency__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Currency</label>
        <referenceTo>Currency__c</referenceTo>
        <relationshipLabel>Customer Receipts</relationshipLabel>
        <relationshipName>Customer_Receipts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Customer_City__c</fullName>
        <description>Customer City</description>
        <label>Customer_City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Country__c</fullName>
        <description>Customer Country</description>
        <label>Customer Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_State__c</fullName>
        <description>Customer State</description>
        <label>Customer State</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Street__c</fullName>
        <description>Customer Street</description>
        <label>Customer Street</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Zip_Code__c</fullName>
        <description>Customer ZIP Code</description>
        <label>Customer Zip Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Customer</description>
        <label>Customer</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 OR 2</booleanFilter>
            <errorMessage>The user must enter either a corporate or a bill to customer</errorMessage>
            <filterItems>
                <field>Customer__c.RecordTypeId</field>
                <operation>equals</operation>
                <value>Corporate Parent</value>
            </filterItems>
            <filterItems>
                <field>Customer__c.RecordTypeId</field>
                <operation>equals</operation>
                <value>Bill To</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Customer__c</referenceTo>
        <relationshipLabel>Customer Receipts</relationshipLabel>
        <relationshipName>Customer_Receipts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Date_Deposited__c</fullName>
        <description>Date this payment was deposited</description>
        <label>Date Deposited</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Printed__c</fullName>
        <description>The date when check is printed/ re-printed.</description>
        <inlineHelpText>Date on which the check was printed/reprinted.</inlineHelpText>
        <label>Date Printed</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Date_Received__c</fullName>
        <description>Date of receipt</description>
        <label>Date Received</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Deposit_Identifier__c</fullName>
        <label>Deposit Identifier</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Exception_Detail__c</fullName>
        <description>Describes the exception in greater detail</description>
        <label>Exception Detail</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Exception__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Set to true if Exception during data load</description>
        <label>Exception</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Exceptions_Count__c</fullName>
        <label>Exceptions Count</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ExtId__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Finalized_Date__c</fullName>
        <description>Finalized Date is the date when the document is finalized.</description>
        <label>Finalized Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Finalized__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Finalized check box is set to true when the customer receipt is finalized and ready for accounting entries to be generated.</description>
        <inlineHelpText>A checkmark indicates that the record is finalized and ready for accounting (the &quot;Payment Applied&quot; checkbox is selected and the &quot;Amount Unapplied&quot; is &quot;0&quot;.</inlineHelpText>
        <label>Finalized</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Finalized_hidden__c</fullName>
        <defaultValue>false</defaultValue>
        <description>DO NOT PUT on page layout, it is hidden field to control user click.</description>
        <label>Finalized Hidden</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Has_Exceptions__c</fullName>
        <formula>OR(

Exceptions_Count__c &gt; 0,

Line_Exceptions__c &gt; 0

)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Has Exceptions</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Historical__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Historical</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Line_Exceptions__c</fullName>
        <label>Line Exceptions</label>
        <summaryFilterItems>
            <field>Customer_Receipt_Line__c.Has_Exceptions__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>Customer_Receipt_Line__c.Customer_Receipt__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Payee__c</fullName>
        <description>Company receiving the payment</description>
        <label>Payee</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payment_Method_2__c</fullName>
        <label>DEPRECATED</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Check</fullName>
                </value>
                <value>
                    <fullName>EFT</fullName>
                </value>
                <value>
                    <fullName>Cash</fullName>
                </value>
                <value>
                    <fullName>Credit card</fullName>
                </value>
                <value>
                    <fullName>Online</fullName>
                </value>
                <value>
                    <fullName>Wire</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Payment_Method_3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Payment Method</label>
        <referenceTo>Payment_Method__c</referenceTo>
        <relationshipLabel>Customer Receipts</relationshipLabel>
        <relationshipName>Customer_Receipts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Payment_Method_G__c</fullName>
        <description>Mode of payment</description>
        <label>Payment Method</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Payment_Method</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Posting_Date__c</fullName>
        <label>Posting Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Reference_Number__c</fullName>
        <description>Reference number from the source transmission</description>
        <label>Reference Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reference__c</fullName>
        <description>Reference document, e.g., check number</description>
        <label>Reference</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Related_Customer_Receipt__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Related Customer Receipt</label>
        <referenceTo>Customer_Receipt__c</referenceTo>
        <relationshipLabel>Customer Receipts</relationshipLabel>
        <relationshipName>Customer_Receipts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Status_Reason__c</fullName>
        <description>detail reasons for status will be stored</description>
        <label>Status Reason</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Void from Overflow Advice</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Open</fullName>
                </value>
                <value>
                    <fullName>Authorized</fullName>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
                <value>
                    <fullName>Void</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Total_Number_Of_Lines__c</fullName>
        <description>Total Number of lines for this record.</description>
        <inlineHelpText>Total Number of lines for this record.</inlineHelpText>
        <label>Total Number Of Lines</label>
        <summaryForeignKey>Customer_Receipt_Line__c.Customer_Receipt__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Payment__c</fullName>
        <label>Total Payment</label>
        <summarizedField>Customer_Receipt_Line__c.Payment_Amount__c</summarizedField>
        <summaryForeignKey>Customer_Receipt_Line__c.Customer_Receipt__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Transaction_Currency__c</fullName>
        <label>Transaction Currency</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>CAD</fullName>
                </value>
                <value>
                    <fullName>EUR</fullName>
                </value>
                <value>
                    <fullName>GBP</fullName>
                </value>
                <value>
                    <fullName>USD</fullName>
                    <default>true</default>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Transaction_Date__c</fullName>
        <description>Date of the transaction, this could be populated from any source using a workflow depending on customer need.</description>
        <label>Transaction Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Transaction_ID__c</fullName>
        <label>Transaction ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Transaction_Type__c</fullName>
        <description>Accounting process uses this field to as one of the criteria to determine the accounting rule to be used to book this transaction.</description>
        <label>Transaction Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>--None--</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Receipt</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Prepayment</fullName>
                </value>
                <value>
                    <fullName>Refund</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Void_Date__c</fullName>
        <label>Void Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Void__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Void</label>
        <type>Checkbox</type>
    </fields>
    <label>Customer Receipt</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Customer__c</columns>
        <columns>Date_Received__c</columns>
        <columns>Type__c</columns>
        <columns>Amount_Received__c</columns>
        <columns>Finalized__c</columns>
        <columns>Exception__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Today_Receipts</fullName>
        <columns>NAME</columns>
        <columns>Date_Received__c</columns>
        <columns>Amount_Received__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Finalized__c</columns>
        <columns>Amount_Unapplied__c</columns>
        <columns>Exception__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Date_Received__c</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <label>Today&apos;s Receipts</label>
    </listViews>
    <nameField>
        <label>Customer Receipt</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Customer Receipts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Amount_Received_and_Bank_Account</fullName>
        <active>true</active>
        <errorConditionFormula>OR(
NOT(ISBLANK(Amount_Received__c )) &amp;&amp; Amount_Received__c &gt; 0 &amp;&amp; AND(ISBLANK(Bank_Account_2__c), ISBLANK(Payment_Method_3__c)),
NOT(ISBLANK(Bank_Account_2__c)) &amp;&amp;  ISBLANK(Amount_Received__c )
) 
&amp;&amp; Finalized__c = false &amp;&amp; NOT(ISCHANGED(Finalized__c))</errorConditionFormula>
        <errorMessage>Need to populate both Amount Received and Bank Account</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Bank_Account_should_match_with_Company</fullName>
        <active>true</active>
        <errorConditionFormula>AND(Bank_Account_2__c != null, 
Bank_Account_2__r.Company__c &lt;&gt; Company__c)</errorConditionFormula>
        <errorMessage>Bank Account should be associated with the Company mentioned on this receipt. Please update it accordingly.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Bank_account_have_same_currency</fullName>
        <active>true</active>
        <errorConditionFormula>NOT(ISBLANK( Bank_Account_2__c )) &amp;&amp;   Currency__r.ISO_Code__c  !=   Bank_Account_2__r.Currency__r.ISO_Code__c</errorConditionFormula>
        <errorMessage>You can&apos;t create a receipt using a different currency from the bank account&apos;s currency.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Bank_account_must_have_same_currency</fullName>
        <active>false</active>
        <errorConditionFormula>NOT(ISBLANK( Bank_Account_2__c )) &amp;&amp;     
TEXT( Transaction_Currency__c ) !=    
TEXT( Bank_Account_2__r.Transaction_Currency__c )</errorConditionFormula>
        <errorMessage>Bank account must have the same transaction currency as the customer receipt</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Cancelled_not_Finalized</fullName>
        <active>true</active>
        <errorConditionFormula>TEXT(Status__c) == &apos;Cancelled&apos; &amp;&amp; Finalized__c</errorConditionFormula>
        <errorMessage>You cannot Finalize a Customer Receipt that has been cancelled.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Finalized_Check</fullName>
        <active>true</active>
        <description>Finalized checkbox should not be checked when there is amount unapplied left on the record.</description>
        <errorConditionFormula>IF( AND( ISPICKVAL(Type__c, &apos;Receipt&apos;), Amount_Unapplied__c != 0,  Finalized__c == TRUE), TRUE, FALSE )</errorConditionFormula>
        <errorMessage>This customer receipt is not ready to be finalized yet. The entire amount should be applied!</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Payment_Method_Validation</fullName>
        <active>false</active>
        <errorConditionFormula>false</errorConditionFormula>
        <errorMessage>Please enter a payment method</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Payment_method_and_Reference_Numvber</fullName>
        <active>true</active>
        <errorConditionFormula>NOT(ISBLANK( Bank_Account_2__c )) &amp;&amp; ISBLANK( TEXT(Payment_Method_G__c)) &amp;&amp; ISBLANK( Reference_Number__c )</errorConditionFormula>
        <errorMessage>Please specify payment method and reference number</errorMessage>
    </validationRules>
</CustomObject>